engine/tests/fixtures/invalid/expression/rule-bad-expression.tg
rule rule_bad_expression {
  name "Bad Expression"
  description "Invalid rule expressions"

  applies_to [cap_missing]
  condition "project.status archived"
  requirement ""
  severity error

  status enforced
}
